<resources>
    <string name="app_name">Proyecto_Android_Final_Iker_Markel</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">Lm2pQHzQ27NxfCGB03cQ6bLX9bzXIUcvm9jbqb66</string>
    <string name="back4app_client_key">7TiCuqFO1xCAESn2kzqNNPuqFBHXXFzh7BiosFav</string>
    <string name="editar">Editar</string>
    <string name="volver">Volver</string>
    <string name="eliminar">Eliminar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insertar">Insertar</string>
    <string name="titulo">Titulo</string>
    <string name="autor">Autor</string>
    <string name="genero">Genero</string>
    <string name="fecha">Fecha</string>
    <string name="modificar">Modificar</string>
    <string name="insert">Insertar</string>
    <string name="volverr">Volver</string>
    <string name="hecho_por">Hecho por:</string>
    <string name="iker_lerones_y_markel_fernandez_de_labastida">Iker Lerones y Markel Fernandez de Labastida</string>
    <string name="volver_a_la_lista">Volver a la lista</string>
    <string name="Extra">Extra</string>
    <string name="Creditos">Creditos</string>

</resources>