<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostrarFragment">


    <LinearLayout
        android:id="@+id/llDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/llBotones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Ver_Titulo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/titulo" />

        <TextView
            android:id="@+id/Ver_Autor"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/autor" />

        <TextView
            android:id="@+id/Ver_Genero"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/genero" />

        <TextView
            android:id="@+id/Ver_Fecha"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/fecha" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/Ver_Botones2"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/llDatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/eliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eliminar" />

        <Button
            android:id="@+id/VerVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volverr" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>