<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/libros_editada"
    tools:context=".InsertarFragment">


    <LinearLayout
        android:id="@+id/llDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/llBotones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/Inser_Titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="25sp"
            android:textColorHint="@color/black"
            android:hint="@string/titulo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/Inser_Autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="25sp"
            android:textColorHint="@color/black"
            android:hint="@string/autor"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/Inser_Genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="25sp"
            android:textColorHint="@color/black"
            android:hint="@string/genero"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/Inser_Fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="25sp"
            android:textColorHint="@color/black"
            android:hint="@string/fecha"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/Inser_Botones"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/llDatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <Button
            android:id="@+id/Inser_Insert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/insert" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>