<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/libros_editada"
    tools:context=".ExtraActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/texto1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginLeft="125dp"
            android:layout_marginRight="125dp"
            android:layout_marginBottom="50dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:text="@string/hecho_por" />

        <TextView
            android:id="@+id/texto2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="50dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:text="@string/iker_lerones_y_markel_fernandez_de_labastida" />

        <Button
            android:id="@+id/VolverActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="100dp"
            android:text="@string/volver_a_la_lista" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>